<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/title_text_view"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_oie_sample"
            />

        <TextView
            android:id="@+id/launch_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_to_oie_sample_description"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/advanced"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recovery_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recovery_token"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
